--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/html-webpack5": "^8.6.4",
     "@storybook/test": "^8.6.4",
     "@storybook/testing-library": "^0.2.1",
+    "@uswds/uswds": "^3.12.0",
     "css-loader": "^7.1.2",
     "sass": "^1.85.1",
     "sass-embedded": "^1.85.1",
