Updated packages and preview to remove js files on story change

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@storybook/addon-links": "^8.6.4",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
     "@storybook/blocks": "^8.6.4",
-    "@storybook/client-api": "^7.6.17",
     "@storybook/html": "^8.6.4",
     "@storybook/html-webpack5": "^8.6.4",
+    "@storybook/preview-api": "^8.6.6",
     "@storybook/test": "^8.6.4",
     "@storybook/testing-library": "^0.2.1",
     "@uswds/uswds": "^3.12.0",
