--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/testing-library": "^0.2.1",
     "@uswds/uswds": "^3.12.0",
     "babel-loader": "^10.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^7.1.2",
     "sass": "^1.85.1",
     "sass-embedded": "^1.85.1",
