--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "storybook": "^8.6.4",
     "style-loader": "^4.0.0",
     "twigjs-loader": "^1.0.3",
+    "webpack-manifest-plugin": "^5.0.1",
     "yaml-loader": "^0.8.1"
   }
 }
