--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "sass-loader": "^16.0.5",
     "storybook": "^8.6.4",
     "style-loader": "^4.0.0",
-    "twigjs-loader": "^1.0.3",
+    "twig": "^1.17.1",
+    "twig-loader": "^0.5.5",
     "webpack-manifest-plugin": "^5.0.1",
     "yaml-loader": "^0.8.1"
   }
