--- a/package.json
+++ b/package.json
@@ -32,11 +32,16 @@
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
     "gh-pages": "^6.3.0",
+    "postcss-scss": "^4.0.9",
     "sass": "^1.85.1",
     "sass-embedded": "^1.85.1",
     "sass-loader": "^16.0.5",
     "storybook": "^8.6.4",
     "style-loader": "^4.0.0",
+    "stylelint": "^16.16.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-scss": "^6.11.1",
+    "stylelint-webpack-plugin": "^5.0.1",
     "twig": "^1.17.1",
     "twig-loader": "^0.5.5",
     "webpack-manifest-plugin": "^5.0.1",
