--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "homepage": "https://carlmartens.github.io/storybook/",
+  "engines": {
+    "node": "<=18",
+    "yarn": "^1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "deploy-storybook": "npm run build-storybook && echo > storybook-static/.nojekyll && gh-pages -d storybook-static"
+    "develop": "storybook dev -p 6006",
+    "build": "storybook build",
+    "lint:scss": "stylelint 'src/**/*.scss'",
+    "deploy": "yarn build && echo > storybook-static/.nojekyll && gh-pages -d storybook-static"
   },
   "keywords": [],
   "author": "",
