--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "storybook",
   "version": "1.0.0",
   "main": "index.js",
-  "homepage": "https://carlmartens.github.io/storybook/",
   "engines": {
     "node": "<=18",
     "yarn": "^1.0"
@@ -12,7 +11,7 @@
     "develop": "storybook dev -p 6006",
     "build": "storybook build",
     "lint:scss": "stylelint 'src/**/*.scss'",
-    "deploy": "yarn build && echo > storybook-static/.nojekyll && gh-pages -d storybook-static"
+    "deploy": "yarn build && node deploy.js"
   },
   "keywords": [],
   "author": "",
