--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/addon-a11y": "^8.6.6",
     "@storybook/addon-essentials": "^8.6.4",
     "@storybook/addon-links": "^8.6.4",
+    "@storybook/addon-viewport": "8.6.6",
     "@storybook/blocks": "^8.6.4",
     "@storybook/html": "^8.6.4",
     "@storybook/html-webpack5": "^8.6.4",
